# sphinx-ddd-ext

./: README.md  mypy.ini  pyproject.toml  tox.ini
docs/source/: conf.py
src/sphinx_ddd_ext/: __init__.py
tests/: test_simple.py
