[build-system]
requires = [
    "flit_core >=3.4,<4",
    "wheel",
]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-ddd-ext"
readme = "README.md"
authors = [
    {name = "yishenggudou", email = "yishenggudou@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]

[tool.flit.module]
name = "sphinx_ddd_ext"

[project.urls]
Source = "https://github.com/yishenggudou/sphinx-ddd-ext"
Tracker = "https://github.com/yishenggudou/sphinx-ddd-ext/issues"
Documentation = "https://sphinx-ddd-ext.readthedocs.io"

[project.optional-dependencies]
dev = [
    "furo",
    "hypothesis",
    "myst-parser",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "sphinx",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx~=4.3.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
